# graphrag-agent

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/career/: external-project-research.md  rejection-analysis-and-project-ideas.md
examples/: quickstart.py  sample.txt
src/graphrag_agent/: __init__.py  agent.py  chunk.py  cli.py  config.py  extract.py  graph.py  llm.py  models.py  retrieve.py
tests/: conftest.py  test_agent.py  test_extract.py  test_graph.py
