[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "graphrag-agent"
version = "0.1.0"
description = "Knowledge-graph construction + graph-augmented retrieval (GraphRAG)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Aravind Pradeep" }]
dependencies = ["networkx>=3.0", "requests>=2.28", "pydantic>=2.0"]

[project.scripts]
graphrag-agent = "graphrag_agent.cli:main"
graphrag = "graphrag_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
